# mystig-next

./: Cargo.toml  README.md
assets/scripts/: main.lua
assets/scripts/mystig/: init.lua
assets/scripts/object/: init.lua  old_class.lua
assets/shaders/: actor.vert  basic.vert  basic_300_es.frag  basic_300_es.vert  mat.vert  multicolor.frag  multicolor.vert  multicolor_300_es.frag
src/: main.rs
src/game/: mod.rs
src/glium_sdl2/: mod.rs
src/input/: axis.rs  button.rs  joystick.rs  keyboard.rs  mod.rs  mouse.rs  replay.rs
src/loader/: mod.rs
src/mystig/: actor.rs  luabind.rs  mod.rs  scene.rs  shape.rs
src/mystig/input/: mapper.rs  mod.rs  state.rs
src/mystig/luabind/: mod.rs
tools/: lua_repl.sh  pre-commit
