[package]
name = "mystig-next"
version = "0.1.0"
authors = ["taskie <t@skie.jp>"]

[dependencies]
rlua = "0.9.3"
rmp = "0.8"
nalgebra = "*"

[dependencies.sdl2]
version = "0.30"
default-features = false
features = ["ttf", "image", "gfx", "mixer"]

[dependencies.glium]
version = "0.18"
default-features = false
features = []
